add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(MyHello)
add_subdirectory(itrBB)
add_subdirectory(itrinsideBB)
add_subdirectory(opcodeCounter)
add_subdirectory(defuse)
add_subdirectory(usedef)
add_subdirectory(itrpred)
add_subdirectory(StatementMapper)